--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "receptionist",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "type": "module",
   "license": "MIT",
+  "main": "receptionist.js",
   "files": [
-    "receptionist.js",
-    "receptionist.html"
+    "receptionist.js"
   ],
   "description": "Onboarding widget to reduce churn on your SaaS app",
-  "main": "receptionist.js",
   "scripts": {
     "start": "npx live-server --port=5500 --open=demo",
     "lint": "npx prettier --write \"**/*.js\""
